<resources>
    <string name="app_name">Number converter</string>

    <!-- Convert -->
    <string name="bin">BIN</string>
    <string name="oct">OCT</string>
    <string name="dec">DEC</string>
    <string name="hex">HEX</string>
    <string name="show_solutions">Show solutions</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="letter_a">A</string>
    <string name="letter_b">B</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="letter_c">С</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="letter_d">D</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="letter_e">E</string>
    <string name="letter_f">F</string>
    <string name="ac">AC</string>
    <string name="backspace">Backspace</string>

    <!-- Settings fragment -->
    <string name="fragment_settings_name">Settings</string>

    <string name="settings_language">Language</string>
    <string name="settings_language_en">English</string>
    <string name="settings_language_uk">Українська</string>
    <string-array name="language_array">
        <item>English</item>
        <item>Українська</item>
    </string-array>

    <string name="settings_theme">Theme</string>
    <string name="settings_theme_orange">Orange</string>
    <string name="settings_theme_green">Green</string>
    <string name="settings_theme_blue">Blue</string>
    <string name="settings_theme_violet">Violet</string>
    <string-array name="theme_array">
        <item>Orange</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Purple</item>
    </string-array>

    <string name="settings_night_mode">Night mode</string>

    <!-- Toast -->
    <string name="toast_clipboard">Text \"%s\" copied to clipboard</string>
    <string name="toast_digit_limit">Digit limit reached</string>
</resources>